--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,7 @@
     <string name="ulasan">Ulasan</string>
     <string name="slider_desc">Slider Description</string>
     <string name="tentukan_metode_pembayaran_anda_untuk_transaksi_pembayaran_jasa">Tentukan metode pembayaran anda untuk transaksi pembayaran jasa</string>
-    <string name="metode_pembayaran">Metode Pembayaran</string>
-    <string name="bayar_di_tempat_cod">Bayar di Tempat (COD)</string>
+
     <string name="transfer_bank">Transfer Bank</string>
     <string name="ovo">OVO</string>
     <string name="gopay">Gopay</string>
@@ -44,6 +43,10 @@
     <string name="pesan_sekarang">Pesan Sekarang</string>
     <string name="waktu_pemesanan">Waktu Pemesanan</string>
     <string name="tanggal_pemesanan">Tanggal Pemesanan</string>
+    <string name="metode_pembayaran">Metode Pembayaran</string>
+    <string name="preferensi_penyedia_jasa">Preferensi Penyedia Jasa</string>
+    <string name="buat_pesanan">Buat Pesanan</string>
+    <string name="bayar_di_tempat_cod">Bayar di Tempat (COD)</string>
 
 
 </resources>
