fix i-life apps, kurang fitur (filter,jarak,search,chat,notif)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="dibatalkan_oleh">Dibatalkan oleh</string>
     <string name="alasan_dibatalkan">Alasan Dibatalkan</string>
     <string name="pesanan_dibatalkan">Pesanan Dibatalkan</string>
+    <string name="edit_akun">Edit Akun</string>
 
 
 </resources>
