--- a/mitrailifeapps/src/main/res/values/strings.xml
+++ b/mitrailifeapps/src/main/res/values/strings.xml
@@ -103,5 +103,7 @@
     <string name="tambah_toko">+ Tambah Toko</string>
     <string name="image_empty_toko">Image Empty Toko</string>
     <string name="total_harga">Total Harga</string>
+    <string name="toko_anda_belum_mempunyai_penilaian_dan_ulasan_dari_pelanggan">Toko anda belum mempunyai penilaian dan ulasan dari pelanggan.</string>
+    <string name="belum_ada_penilaian">Belum ada Penilaian</string>
 
 </resources>
