--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="alasan_dibatalkan">Alasan Dibatalkan</string>
     <string name="pesanan_dibatalkan">Pesanan Dibatalkan</string>
     <string name="edit_akun">Edit Akun</string>
+    <string name="loading">Loading...</string>
 
 
 </resources>
